# rutineret

./: .env.example  .gitignore  .sops.yaml  API_DOCUMENTATION.md  Dockerfile  Dockerfile.celery  README.md  docker-compose.yml  pyproject.toml  requirements.txt  skaffold.yaml  test_alarms.py
.github/workflows/: deploy.yml
api/: celery.py  db.sqlite3  urls.py
api/settings/: __init__.py  base.py  development.py  production.py  test.py
charts/rutineret/: Chart.yaml  values.yaml
charts/rutineret/data/secrets/: prod.yaml
charts/rutineret/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  database.yaml  deployment-api.yaml  deployment-beat.yaml  deployment-worker.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
charts/rutineret/templates/tests/: test-connection.yaml
docs/: FIXES_SUMMARY.md  LAYOUT_ASSESSMENT.md  OPENAPI_IMPLEMENTATION.md
routines/: apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
routines/migrations/: 0001_initial.py  0002_task_alarm_enabled_task_alarm_minutes_before_and_more.py  0003_fix_completed_at_field.py
templates/emails/: task_reminder.html  task_reminder.txt
users/: admin.py  apps.py  google_oauth_callback.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
users/management/commands/: setup_initial_data.py
users/migrations/: 0001_initial.py  0002_userprofile_timezone.py
